feat:랙별 장비 목록 조회 수정